implement getAllPossiblePosition, create private support methods